# IrisLog

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: IrisLog.h
src/: IrisLog.cpp
tests/: CMakeLists.txt  main.cpp
